# image-generation

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  lint.yml  release.yml  security.yml  test.yml
api/: jobs.py  main.py  schemas.py
configs/: paths.py
docs/: ARCHITECTURE.md  CUSTOM_PIPELINES.md  Home.md  MODELS.md  UPSCALERS.md  WORKFLOWS.md  _Footer.md  _Sidebar.md
image_gen/: __init__.py  engine.py  refine.py  runner.py
image_gen/controlnet/: __init__.py  base.py  canny.py  depth.py  openpose.py
image_gen/database/: __init__.py  image_db.py
image_gen/pipeline/: anime.py  cars.py  closeup_anime.py  difconsistency.py  diffusionbrush.py  drawing.py  ethnicity.py  ghost.py  horror.py  hyperrealistic.py  papercut.py  pipeline_types.py  registry.py  space.py  zombie.py
image_gen/schedulars/: ddim.py  dpmpp.py  dpmpp_2m_karras.py  dpmpp_2m_sde_karras.py  dpmpp_sde_karras.py  euler.py  lms.py
image_gen/tools/: __init__.py  aspect.py  prompts.py
image_gen/upscalers/: __init__.py  base.py  diffusion_upscale.py  lanczos.py  realesrgan_4x.py  realesrgan_anime.py
scripts/: api_scraper.py  extract_prompts.py  prompt_enhancer.py
web/: next.config.ts  package-lock.json  package.json
web/src/api/: client.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: FluidBackground.tsx  ThemeDropdown.tsx
