[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "image-gen"
version = "1.0.0"
description = "Production-grade Stable Diffusion inference engine optimized for low-VRAM GPUs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RajTewari01"}
]
keywords = [
    "stable-diffusion",
    "image-generation",
    "ai",
    "deep-learning",
    "diffusers",
    "controlnet",
    "real-esrgan",
    "low-vram",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "diffusers>=0.25.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "safetensors>=0.3.0",
    "Pillow>=9.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "basicsr>=1.4.2",
    "realesrgan>=0.3.0",
    "controlnet-aux>=0.0.7",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/RajTewari01/image-gen"
Documentation = "https://github.com/RajTewari01/image-gen/tree/main/docs"
Repository = "https://github.com/RajTewari01/image-gen"
Issues = "https://github.com/RajTewari01/image-gen/issues"

[project.optional-dependencies]
ai = ["torchvision>=0.15.0", "torchaudio>=2.0.0"]
vision = ["matplotlib>=3.7.0", "rembg>=2.0.0"]

[project.scripts]
image-gen = "image_gen.runner:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "F401", "E722", "E402", "E741", "E701"]
